syntax = "proto3";

package pandakiller;

option go_package = "gateway/rpc/gen";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";


service PandaKiller {
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
        option (google.api.http) = {
            post: "/accounts"
            body: "*"
        };
    }

    rpc GetAccountBalance (GetAccountBalanceRequest) returns (GetAccountBalanceResponse) {
        option (google.api.http) = {
            post: "/accounts/{account_id}/balance"
            body: "*"
        };
    }
}

message CreateAccountRequest {
    string name = 1;
    string cpf = 2;
    string password = 3;
    int32 balance = 4;
}

message CreateAccountResponse {
    int32 id = 1;
}

message GetAccountBalanceRequest {
    int32 account_id = 1;
}

message GetAccountBalanceResponse {
    int32 balance = 1;
}
